# WIKIDpy

./: README.md  pyproject.toml  pyproject.toml~
WIKIDpy/: __init__.py  base.py  defaults.conf  readscan.py
src/: readscan.py
