[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WIKIDpy"
version = "0.0.1"
authors = [
  { name="Simon Dicker", email="sdicker@hep.upenn.edu" },
]
description = "A python version of MIDAS the MUSTANG2 IDL data analysis software intended to be used with the next generation instrument WIKID"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sdicker/WIKIDpy"
"Bug Tracker" = "https://github.com/sdicker/WIKIDpy/issues"